--- a/src/app/country/view/country-view.component.html
+++ b/src/app/country/view/country-view.component.html
@@ -2,7 +2,7 @@
   <div class="c-container">
     <div class="c-control_bar">
       <div class="c-back_container">
-        <a href="/countries" class="c-back"><span class="fa fa-arrow-left"></span> Back</a>
+        <a (click)="back()" class="c-back"><span class="fa fa-arrow-left"></span> Back</a>
       </div>
     </div>
     <div class="c-country" *ngIf="country">
