--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -53,6 +53,12 @@ body {
 }
 
 .c-presentation {
+  &.c-presentation--base {
+    margin-top: 111px;
+    padding: 0 12px;
+  }
+  .c-presentation-paper {
+  }
   .c-presentation_title {
     font-size: 3em;
     text-align: left;
@@ -70,7 +76,41 @@ body {
     text-decoration: none;
   }
 }
+.c-flag-art-container {
+  width: 80%;
+  margin-left: 12px;
+  margin-top: 24px;
+  transform: rotate(-5deg);
 
+  .c-flag-art {
+    display: grid;
+    grid-template-columns: repeat(25, 1fr);
+    grid-column-gap: 0;
+    row-gap: 0;
+    .c-flag {
+      .c-flag-spacer {
+        opacity: .5;
+        padding: 3px;
+        -webkit-transition: all .125s ease;
+        -moz-transition: all .125s ease;
+        -o-transition: all .125s ease;
+        transition: all .125s ease;
+        img {
+          width: 100%;
+        }
+        cursor: pointer;
+      }
+      &:hover,
+      &:focus,
+      &:active {
+        .c-flag-spacer {
+          opacity: 1;
+          padding: 0;
+        }
+      }
+    }
+  }
+}
 .c-control_bar {
   padding: 24px;
   margin-top: 24px;
@@ -81,6 +121,7 @@ body {
     border: none;
     border-radius: 8px;
     font-size: 1em;
+    cursor: pointer;
     .fa {
       margin-right: 8px;
     }
@@ -92,6 +133,7 @@ body {
     width: 100%;
     max-width: 500px;
     box-sizing: border-box;
+    height: 68px;
     .fa-search {
       margin-right: 24px;
     }
@@ -117,6 +159,7 @@ body {
     float: right;
     width: 200px;
     font-size: 0.9em;
+    height: 68px;
     .c-select {
       border: none;
       min-width: 200px;
@@ -274,6 +317,19 @@ p {
   }
 }
 @media only screen and (max-width: 900px) {
+  .c-flag-art-container {
+    width: 88%;
+    margin: 111px auto 0 auto;
+  }
+  .c-presentation-paper {
+    text-align: center;
+    padding-bottom: 111px;
+    border-bottom: solid 1px rgba(09, 13, 20, 0.11);
+    margin-bottom: 111px;
+    .c-presentation_title {
+      text-align: center;
+    }
+  }
   .c-list {
     grid-template-columns: repeat(3, 1fr);
   }
