Flag Art, Styling

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -103,6 +103,7 @@ body {
       &:hover,
       &:focus,
       &:active {
+        outline: none;
         .c-flag-spacer {
           opacity: 1;
           padding: 0;
@@ -319,13 +320,13 @@ p {
 @media only screen and (max-width: 900px) {
   .c-flag-art-container {
     width: 88%;
-    margin: 111px auto 0 auto;
+    margin: 0 auto 0 auto;
   }
   .c-presentation-paper {
     text-align: center;
-    padding-bottom: 111px;
+    padding-bottom: 55px;
     border-bottom: solid 1px rgba(09, 13, 20, 0.11);
-    margin-bottom: 111px;
+    margin-bottom: 55px;
     .c-presentation_title {
       text-align: center;
     }
