--- a/src/app/base/base.component.html
+++ b/src/app/base/base.component.html
@@ -28,6 +28,9 @@
           <li>Added session storage caching for filter region</li>
           <li>Added clear search country</li>
           <li>Added clear filter region</li>
+          <li>Added country art</li>
+          <li>Added search text module</li>
+          <li>Added filter by module</li>
         </ul>
       </div>
     </div>
